--- a/p.html
+++ b/p.html
@@ -7,6 +7,9 @@
 
     </head>
     <body>
+        <button id="rockbutton">rock</button>
+        <button id="paperbutton">paper</button>
+        <button id="scissorsbutton">scissors</button>
         
     
         <h2>
